flower-app.deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-app-deployment
  labels: 
    first: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template: 
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: flower-app-deployment
          image: nginx:perl
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
  type: ClusterIP
