tomcat.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  labels: 
    first: ubuntu
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template: 
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat-cont
          image: tomcat:9.0.113-jdk17
          ports:
            - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    app: tomcat
ports: 
  - protocol: TCP
    port: 8082         # service port on which port number you want expose an application
    targetPort: 8080 
type: ClusterIP
