ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: MyIngress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /S3
spec:
  ingressClassName: nginx
  rules:
  - http:
    paths:
    - path: /nginx(/|$)(.*)
      pathType: Prefix
      backend:
        service:
          name: nginx-svc
          port:
            number: 81
    - path: /tomcat(/|$)(.*)
      pathType: Prefix
      backend:
        service:
          name: tomcat-svc
          port:
            number: 8082
    - path: /(.*)
      pathType: Prefix
      backend:
        service:
          name: tomcat-svc
          port:
            number: 8082
